--- a/public/app/views/pages/hireMe.html
+++ b/public/app/views/pages/hireMe.html
@@ -14,27 +14,27 @@
        
       <div class="form-group">
         <div class="col-sm-12">    
-          <input type="text" class="form-control" id="name" placeholder=" ENTER YOUR NAME" name="name" value="">
+          <input type="text" class="form-control" id="name" placeholder=" ENTER YOUR NAME" name="name" value="" required>
         </div>
       </div>
 
       <div class="form-group">
         <div class="col-sm-12">
-          <input type="email" class="form-control" id="email" placeholder="ENTER YOUR EMAIL" name="email" value="">
+          <input type="email" class="form-control" id="email" placeholder="ENTER YOUR EMAIL" name="email" value="" required>
         </div>
       </div>
 
       <div class="form-group">
         <div class="col-sm-12">
-          <input type="phone" class="form-control" id="email" name="phone" placeholder="XXX-XXX-XXXX (MOBILE NUMBER)" required/>
+          <input type="phone" class="form-control" id="number" name="phone" placeholder="XXX-XXX-XXXX (MOBILE NUMBER)" required/>
         </div>
       </div>
 
-      <textarea class="form-control" rows="5" placeholder="ENTER YOUR ADDRESS" name="streetAddress"></textarea>
+      <textarea class="form-control" rows="5" placeholder="ENTER YOUR ADDRESS" name="streetAddress"required></textarea>
       
       <button class="btn btn-primary send-button" id="submit" type="submit" value="SEND">
         <div class="button">
-          <i class="fa fa-paper-plane"></i><span class="send-text">SEND</span>
+        <span class="send-text">SEND</span>
         </div>
       
       </button>
