--- a/public/app/views/pages/placeOrder.html
+++ b/public/app/views/pages/placeOrder.html
@@ -422,11 +422,11 @@
                 <br>
                 <h1>Bill Summary</h1>
             </div>
-            <section class="container content-section">
-                    <h2 class="section-header">CART</h2>
+            <section class="c_container content-section">
+                    <h2 class="c_section-header">CART</h2>
                          <div class="cart-row">
-                                <span class="cart-item cart-header cart-column">ITEM------------</span>
-                                <span class="cart-price cart-header cart-column">PRICE----------</span>
+                                <span class="cart-item cart-header cart-column">ITEM</span>
+                                <span class="cart-price cart-header cart-column">PRICE</span>
                                 <span class="cart-quantity cart-header cart-column">QUANTITY</span>
                             </div>
                             <div class="cart-items">
