hire me mail and privacy policy

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -159,9 +159,9 @@
                         </li>
                         <li><a href="/faq">FAQ</a>
                         </li>
-                        <li><a href="#">Privacy Policy</a>
+                        <li><a href="/privacy-policy">Privacy Policy</a>
                         </li>
-                        <li><a href="#">Terms of Use</a>
+                        <li><a href="/terms-of-use">Terms of Use</a>
                         </li>
                     </ul>
                 </div>
