--- a/public/app/views/pages/contact.html
+++ b/public/app/views/pages/contact.html
@@ -29,7 +29,7 @@
   
         <textarea class="form-control" rows="10" placeholder="MESSAGE" name="message" ng-model = "form.formData.text"required></textarea>
         
-        <button class="btn btn-primary send-button" ng-click="form.sendMsg(formData)">
+        <button class="btn btn-primary send-button" type="submit" ng-click="form.sendMsg(formData)">
           <div class="button">
             <span class="send-text">SEND</span>
           </div>
