--- a/public/app/views/pages/hireMe.html
+++ b/public/app/views/pages/hireMe.html
@@ -14,25 +14,25 @@
        
       <div class="form-group">
         <div class="col-sm-12">    
-          <input type="text" class="form-control" id="name" placeholder=" ENTER YOUR NAME" name="name" value="" required>
+          <input type="text" class="form-control" id="name" placeholder=" ENTER YOUR NAME" name="name" ng-model = "form.hiremeData.name" required>
         </div>
       </div>
 
       <div class="form-group">
         <div class="col-sm-12">
-          <input type="email" class="form-control" id="email" placeholder="ENTER YOUR EMAIL" name="email" value="" required>
+          <input type="email" class="form-control" id="email" placeholder="ENTER YOUR EMAIL" name="email" ng-model = "form.hiremeData.email" required>
         </div>
       </div>
 
       <div class="form-group">
         <div class="col-sm-12">
-          <input type="phone" class="form-control" id="number" name="phone" placeholder="XXX-XXX-XXXX (MOBILE NUMBER)" required/>
+          <input type="phone" class="form-control" id="number" name="phone" placeholder="XXX-XXX-XXXX (MOBILE NUMBER)" ng-model = "form.hiremeData.number" required/>
         </div>
       </div>
 
-      <textarea class="form-control" rows="5" placeholder="ENTER YOUR ADDRESS" name="streetAddress"required></textarea>
+      <textarea class="form-control" rows="5" placeholder="ENTER YOUR ADDRESS" name="streetAddress" ng-model = "form.hiremeData.email" required></textarea>
       
-      <button class="btn btn-primary send-button" id="submit" type="submit" value="SEND">
+      <button class="btn btn-primary send-button" id="submit" type="submit" ng-click="form.hiremeMsg(hiremeData)" value="SEND">
         <div class="button">
         <span class="send-text">SEND</span>
         </div>
