--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,9 +1,3 @@
-/*!
- * Start Bootstrap - Agency Bootstrap Theme (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 body {
     overflow-x: hidden;
@@ -1769,6 +1763,11 @@ checkout page css
     font-size: 1.75em;
 }
 
+
+.privacy{
+    text-align: justify;
+    padding: 70px;
+}
 
 /* 
 .c_row {
