sweets to menu and order

--- a/public/app/views/pages/menu.html
+++ b/public/app/views/pages/menu.html
@@ -20,4 +20,15 @@
             </footer>
         </div>
     </div>
+
+    <div class="column">
+        <div class="card">
+            <a href="/sweets">
+            <img src="../../assets/images/sweets.jpg" alt="Avatar" style="width:100%">
+            </a>
+            <footer>
+                <h2>Sweets Menu</h2>
+            </footer>
+        </div>
+    </div>
 </div>
