--- a/public/app/views/pages/menu.html
+++ b/public/app/views/pages/menu.html
@@ -1,3 +1,6 @@
+<div class="container marketing" style="background: linear-gradient(45deg, #49D49D 10%, #A2C7E5 90%);"></div>
+
+
 <div class="box">
     <div class="column">
         <div class="card">
@@ -20,6 +23,21 @@
             </footer>
         </div>
     </div>
+</div>
+   
+<div class="box">
+    <div class="column">
+        <div class="card">
+            <a href="/sides">
+            <img src="../../assets/images/chips_and_nacho_cheese_sauce.jpg" alt="Avatar">
+            </a>
+            <footer>
+                <h2>Sides Menu</h2>
+                <br>
+                <br>
+            </footer>
+        </div>
+    </div>
 
     <div class="column">
         <div class="card">
@@ -31,4 +49,7 @@
             </footer>
         </div>
     </div>
+
+</div>
+
 </div>
