--- a/public/app/views/pages/placeOrder.html
+++ b/public/app/views/pages/placeOrder.html
@@ -416,6 +416,118 @@
         
     </div>
 
+    
+    <div class="row">
+        <div class="col-md-2 text-center" >
+            <h2 style="text-align: center;">Sides <br> Menu <br> --->>></h2>
+        </div>
+
+        <div class="col-md-2 text-center">
+            <div class="card shop-items">
+                <div class="shop-item">
+                    <h2>
+                    <span class="shop-item-title">Cheese Roll Up</span>
+                    </h2>
+                    <br>
+                    <br>
+                    <br>
+                    <div class="shop-item-details">
+                        <span class="shop-item-price">$1.00</span>
+                        <br>
+                        <label class="quantity" for="qty">Quantity</label>
+                        <br>
+                        <div class="space">
+                            <select class="shop-item-qty" name="qty" id="qty"> 
+                            <option value="none" selected disabled hidden> 
+                                Select an qty 
+                            </option> 
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            </select> 
+                        </div>
+                        <br>
+                        <br>
+                        <br>
+                        <button class="btn btn-success shop-item-button" type="button">ADD TO CART</button>
+                    </div>
+                </div>
+            </div> 
+        </div>
+
+        <div class="col-md-2 text-center">
+            <div class="card shop-items">
+                <div class="shop-item">
+                    <h2>
+                    <span class="shop-item-title">Chips and Nacho Cheese Sauce</span>
+                    </h2>
+                    <br>
+                    
+                    <div class="shop-item-details">
+                        <span class="shop-item-price">$1.69</span>
+                        <br>
+                        <label class="quantity" for="qty">Quantity</label>
+                        <br>
+                        <div class="space">
+                            <select class="shop-item-qty" name="qty" id="qty"> 
+                            <option value="none" selected disabled hidden> 
+                                Select an qty 
+                            </option> 
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            </select> 
+                        </div>
+                        <br>
+                        <br>
+                        <br>
+                        <button class="btn btn-success shop-item-button" type="button">ADD TO CART</button>
+                    </div>
+                </div>
+            </div> 
+        </div>
+
+        
+        <div class="col-md-2 text-center">
+            <div class="card shop-items">
+                <div class="shop-item">
+                    <h2>
+                    <span class="shop-item-title">Chips and Guacamole</span>
+                    </h2>
+                    
+                    <br>
+                    <div class="shop-item-details">
+                        <span class="shop-item-price">$1.59</span>
+                        <br>
+                        <label class="quantity" for="qty">Quantity</label>
+                        <br>
+                        <div class="space">
+                            <select class="shop-item-qty" name="qty" id="qty"> 
+                            <option value="none" selected disabled hidden> 
+                                Select an qty 
+                            </option> 
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            </select> 
+                        </div>
+                        <br>
+                        <br>
+                        <br>
+                        <button class="btn btn-success shop-item-button" type="button">ADD TO CART</button>
+                    </div>
+                </div>
+            </div> 
+        </div>
+
+    </div>
+
     <div class="row">
         <div class="col-md-2 text-center" >
             <h2 style="text-align: center;">Sweets <br> Menu <br> --->>></h2>
