--- a/public/app/views/pages/sweets.html
+++ b/public/app/views/pages/sweets.html
@@ -1,16 +1,16 @@
-<div class="drinksMenu">
+<div class="container marketing" style="background: linear-gradient(45deg, #49D49D 10%, #A2C7E5 90%);">
     <div class="row">
     
         <div class="col-md-4 text-center">
-            <img src="../../assets/images/cinnamon_twists.jpg" alt="Avatar" >
+            <img src="../../assets/images/cinnamon_twists.jpg" alt="Avatar" style="width:369px; height:369px;">
             <footer>
                 <h2>Cinnamon Twists</h2>
                 <h4>$1.00</h4>
             </footer>
         </div>
    
-        <div class="col-md-4 text-center">
-            <img src="../../assets/images/CINNABON DELIGHTS_2.jpg" alt="Avatar" >
+        <div class="col-md-4 text-center" >
+            <img src="../../assets/images/CINNABON DELIGHTS_2.jpg" alt="Avatar" style="width:369px; height:369px;">
             <footer>
                 <h2>Cinnabon Delights(2)</h2>
                 <h4>$1.00</h4>
@@ -19,7 +19,7 @@
     </div>
     
         <div class="col-md-4 text-center">
-            <img src="../../assets/images/CINNABON DELIGHTS_12.jpg" alt="Avatar" >
+            <img src="../../assets/images/CINNABON DELIGHTS_12.jpg" alt="Avatar" style="width:369px; height:369px;">
             <footer>
                 <h2>Cinnabon Delights(12)</h2>
                 <h4>$4.99</h4>
