--- a/public/app/views/pages/checkoutStatus.html
+++ b/public/app/views/pages/checkoutStatus.html
@@ -1,10 +1,11 @@
 <div class="orderFinalcontainer">
+
   <div class="wrap">
   
     <svg  width="150" height="150" viewBox="0 0 100 100">
       <g id="1" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(-1.000000, -1.000000)">
       <g id="group" transform="translate(3.000000, 3.000000)" stroke-width="3">
-      <circle id="mycircle" cx="50" cy="50" r="40" stroke="#364F6B" stroke-width="5" fill="white" />
+      <circle id="mycircle" cx="50" cy="50" r="40" stroke="#364F6B" stroke-width="5" fill="linear-gradient(45deg, #49D49D 10%, #A2C7E5 90%)" />
         <polyline id="mycheck" points="20,50,40 70,75 35" style="fill:none;stroke:green;stroke-width:5" stroke-linecap="round" stroke-linejoin="round"/>
         </g>
         </g>
