--- a/public/app/views/pages/checkoutPayment.html
+++ b/public/app/views/pages/checkoutPayment.html
@@ -10,7 +10,8 @@
         
           <div class="cc_col-50">
             
-            <h3>Complete the Payment to Proceed</h3>
+            <h3 class="cc_head">Complete the Payment to Proceed</h3>
+          </br>
 
               <label class="cc_label" for="fname">Accepted Cards</label>
 
@@ -22,10 +23,10 @@
                 </div>
 
               <label class="cc_label" for="cname">Name on Card</label>
-              <input class="cc_in_text" type="text" id="cname" name="cardname" placeholder="Name On Card">
+              <input class="cc_in_text" type="text" id="cname" name="cname" placeholder="Name On Card">
 
               <label class="cc_label" for="ccnum">Credit card number</label>
-              <input class="cc_in_text" type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
+              <input class="cc_in_text" type="text" id="ccnum" name="ccnum" placeholder="1111-2222-3333-4444">
 
               <label class="cc_label" for="expmonth">Exp Month</label>
               <select class="cc_in_text" id="expmonth" name="expmonth">
